--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -38,6 +38,7 @@ ul {
 }
 
 .wrapper {
+  height: 100%;
   top: 0;
   bottom: 0;
   left: 0;
@@ -53,6 +54,7 @@ ul {
   right: 0;
   left: 0;
   min-height: 1000px;
+  height: 100%;
   padding-bottom: 100px;
 }
 
